--- a/app/src/main/res/layout/item1.xml
+++ b/app/src/main/res/layout/item1.xml
@@ -2,11 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:orientation="vertical"
+    android:id="@+id/line"
     android:layout_height="wrap_content">
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:orientation="vertical"
         android:background="@drawable/but"
         android:layout_margin="10dp">
@@ -14,12 +15,14 @@
             android:id="@+id/icon"
             android:layout_width="150dp"
             android:layout_height="150dp"
+            android:layout_gravity="center"
             android:background="@drawable/ic_launcher_background"/>
         <TextView
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:maxLines="2"
+            android:lines="1"
             android:text="sss"/>
 
     </LinearLayout>
