--- a/app/src/main/res/layout/item1.xml
+++ b/app/src/main/res/layout/item1.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="250dp"
     android:orientation="vertical"
     android:id="@+id/line"
     android:layout_height="wrap_content">
@@ -10,7 +10,7 @@
         android:layout_height="200dp"
         android:orientation="vertical"
         android:background="@drawable/but"
-        android:layout_margin="10dp">
+        android:layout_margin="20sp">
         <com.facebook.drawee.view.SimpleDraweeView
             android:id="@+id/icon"
             android:layout_width="150dp"
@@ -22,6 +22,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:maxLines="2"
+            android:lines="1"
+            android:text="sss"/>
+        <TextView
+            android:id="@+id/price"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:maxLines="2"
+            android:textColor="#ff0000"
             android:lines="1"
             android:text="sss"/>
 
